# ofmc

./: README.md  all.toml  custom_fixes.py  debug.toml  metadata_sorter.py  pyproject.toml  temp.toml
ofmc/: __init__.py  __main__.py  batch_compiler.py  book_builder.py  config.py  content_extractor.py  locator.py  main.py  parser.py  plugins.py  renderer.py  requirements.txt  utils.py
ofmc/extras/: custom_fixes.py  debug.toml
